Fix for calendly-bubble to be accessible on mobile devices #2 - removed second position property

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -201,7 +201,6 @@ footer {
 }
 
 #calendly-bubble {
-    position: fixed;
     bottom: 10px;
     right: 40px;
     background-color: black;
